// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIComposition6> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-6 xui-composition-is-finite"
>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUIComposition6> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-6 xui-composition-is-finite"
>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUIComposition6> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-6 single-without-head"
>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;
